[package]
name = "rsh"
version = "0.1.0"
authors = ["christopher-henderson <chris@chenderson.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shlex = "0.1.1"
lazy_static = "1.4.0"
typed-arena = "2.0.1"
bumpalo = "3.3.0"
dirs = "2.0.2"
